--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/small.css" media="(max-width: 630px)">
-    <link href='http://fonts.googleapis.com/css?family=Great+Vibes' rel="stylesheet" type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Roboto' rel="stylesheet" type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel="stylesheet" type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel="stylesheet" type='text/css'>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
