--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <p>Every year we host an open house on New Year's Day. This is a way for neighbors to come together to meet each other and celebrate the new year. Whether you've lived in Salem for a few months or a few decades, we'd love to have you.</p>
 
-        <p>This party is hosted at a historic Victorian mansion; built in 1870 on the site of an even older home destroyed by fire. If you've ever been curious about the carousel horse in the window, now is your chance to pick brain of the extraordinary owner of this home, who loves to show and tell.</p>  
+        <p>This party is hosted at a historic Victorian mansion; built in 1870 on the site of an even older home destroyed by fire. If you've ever been curious about the carousel horse in the window, now is your chance to pick the brain of the extraordinary owner of this home, who loves to show and tell.</p>  
       </section>
 
       <section class="contact">
