--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<title>Snow Day Memo</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<title>Liz Meyer, Artist</title>
 	</head>
 
 	<body>
-		<h1>Liz Meyer, Artist</h1>
-		<p>This is the artistic design business of Liz Meyer</p>
+		
+		<h1>School Closing Announcement</h1>
+
+		<hr>
+		
+		<h3>This is for immediate release.</h3>
+		
+		<p>Due to the snow, schools will be closed tomorrow in the following counties:</p>
+		
+		<ul>
+			<li>King County</li>
+			<li>Queens County</li>
+			<li>New York County</li>
+			<li>Richmond County</li>
+			<li>Bronx County</li>
+			<li>Nassau County</li>
+			<li>Suffolk County</li>
+
+		</ul>
+		
+		<p>For more information regarding the closures, please contact:</p>
+
+		<p>NYC Department of Education<br>
+		555-555-5555<br>
+		<a href="www.schools.nyc.gov">www.schools.nyc.gov</a></p>
+
 	</body>
 </html>
