Update image file names

--- a/pete/index.html
+++ b/pete/index.html
@@ -12,7 +12,7 @@
 		
 		<p id="slogan">A Pot for Everyone</p>
 
-		<img src="images/wheel 3-1.png" title="Clay on Wheel" alt="Clay on potter's wheel">
+		<img src="images/Wheel 3-1.png" title="Clay on Wheel" alt="Clay on potter's wheel">
 
 		<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p> . I strongly believe in the utilitarian aspect of pottery and feel that they need to be used and enjoyed daily. There needs to be an inviting aspect to my work that will draw you in and want to pick the piece up.</p>
 
@@ -33,7 +33,7 @@
 
 		<h2>Process</h2>
 
-		<img src="images/unfired cups 1-1.png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
+		<img src="images/Unfired Cups 1-1.png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
 		<p> Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use.</p>
 
 		<h2>Gallery and Shop</h2>
