padding, divs, margins

--- a/pete/index.html
+++ b/pete/index.html
@@ -14,7 +14,9 @@
 
 		<img src="images/Wheel 3-1.png" title="Clay on Wheel" alt="Clay on potter's wheel">
 
-		<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p> . I strongly believe in the utilitarian aspect of pottery and feel that they need to be used and enjoyed daily. There needs to be an inviting aspect to my work that will draw you in and want to pick the piece up.</p>
+		<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p>
+
+		<p>I strongly believe in the utilitarian aspect of pottery and feel that they need to be used and enjoyed daily. There needs to be an inviting aspect to my work that will draw you in and want to pick the piece up.</p>
 
 		<ul>
 			<li>Custom pottery made to order.</li>
@@ -25,22 +27,30 @@
 
 		<p>If you're interested in learning more, please contact me <a href="mailto:pward4web@gmail.com">here</a>.
 
-		<h2>About</h2>
+		<div class="panel-2">
 
-		<img src="images/Peter Portrait 1-1.png" title="Peter Ward" alt="Picture of artist in apron">
+			<h2>About</h2>
 
-		<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.<p> 
+			<img src="images/Peter Portrait 1-1.png" title="Peter Ward" alt="Picture of artist in apron">
+
+			<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.</p> 
+
+		</div>
 
 		<h2>Process</h2>
 
 		<img src="images/Unfired Cups 1-1.png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
 		<p> Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use.</p>
 
-		<h2>Gallery and Shop</h2>
+		<div class="panel-4">
 
-		<img src="images/Purple Mugs 1-1.png">
+			<h2>Gallery and Shop</h2>
 
-		<p> Explore the artist's gallery, and order your very own piece from Peter.</p>
+			<img src="images/Purple Mugs 1-1.png">
+
+			<p> Explore the artist's gallery, and order your very own piece from Peter.</p>
+
+		</div>
 
 	</body>
 </html>
