--- a/pete/index.html
+++ b/pete/index.html
@@ -12,7 +12,10 @@
 		
 		<p id="slogan">A Pot for Everyone</p>
 
-		<img src="images/Wheel 3-1.png" title="Clay on Wheel" alt="Clay on potter's wheel">
+		<div class="Hero-Image">
+			<img src="images/Wheel 3-1 1500.png" title="Clay on Wheel" alt="Clay on potter's wheel">
+		</div>
+
 
 		<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p>
 
@@ -31,7 +34,7 @@
 
 			<h2>About</h2>
 
-			<img src="images/Peter Portrait 1-1.png" title="Peter Ward" alt="Picture of artist in apron">
+			<img class="Panel-Image" src="images/Peter Portrait 1-1.png" title="Peter Ward" alt="Picture of artist in apron">
 
 			<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.</p> 
 
@@ -39,14 +42,15 @@
 
 		<h2>Process</h2>
 
-		<img src="images/Unfired Cups 1-1.png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
+			<img class="Panel-Image" src="images/Unfired Cups 1-1.png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
+		
 		<p> Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use.</p>
 
 		<div class="panel-4">
 
 			<h2>Gallery and Shop</h2>
 
-			<img src="images/Purple Mugs 1-1.png">
+			<img class="Panel-Image" src="images/Purple Mugs 1-1.png">
 
 			<p> Explore the artist's gallery, and order your very own piece from Peter.</p>
 
