--- a/pete/index.html
+++ b/pete/index.html
@@ -13,7 +13,7 @@
 		<p id="slogan">A Pot for Everyone</p>
 
 		<div class="Hero-Image">
-			<img src="images/Wheel 3-1 1500.png" title="Clay on Wheel" alt="Clay on potter's wheel">
+			<img src="images/Wheel(3-1-1500).png" title="Clay on Wheel" alt="Clay on potter's wheel">
 		</div>
 
 
@@ -34,7 +34,7 @@
 
 			<h2>About</h2>
 
-			<img class="Panel-Image" src="images/Peter Portrait 1-1.png" title="Peter Ward" alt="Picture of artist in apron">
+			<img class="Panel-Image" src="images/Peter_Portrait(1-1).png" title="Peter Ward" alt="Picture of artist in apron">
 
 			<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.</p> 
 
@@ -42,7 +42,7 @@
 
 		<h2>Process</h2>
 
-			<img class="Panel-Image" src="images/Unfired Cups 1-1.png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
+			<img class="Panel-Image" src="images/Unfired_Cups(1-1).png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
 		
 		<p> Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use.</p>
 
@@ -50,7 +50,7 @@
 
 			<h2>Gallery and Shop</h2>
 
-			<img class="Panel-Image" src="images/Purple Mugs 1-1.png">
+			<img class="Panel-Image" src="images/Purple_Mugs(1-1).png">
 
 			<p> Explore the artist's gallery, and order your very own piece from Peter.</p>
 
