add image title and alt text

--- a/pete/index.html
+++ b/pete/index.html
@@ -50,7 +50,7 @@
 
 			<h2>Gallery and Shop</h2>
 
-			<img class="Panel-Image" src="images/Purple_Mugs(1-1).png">
+			<img class="Panel-Image" src="images/Purple_Mugs(1-1).png" title="Purple Mugs" alt="Three purple glazed mugs.">
 
 			<p> Explore the artist's gallery, and order your very own piece from Peter.</p>
 
