--- a/pete/index.html
+++ b/pete/index.html
@@ -4,57 +4,116 @@
 		<title>Pete's Pottery</title>
 
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	</head>
 
 	<body>
 
-		<h1>Pete's Pottery</h1>
-		
-		<p id="slogan">A Pot for Everyone</p>
+		<div class="wrapper">
 
-		<div class="Hero-Image">
-			<img src="images/Wheel(3-1-1500).png" title="Clay on Wheel" alt="Clay on potter's wheel">
-		</div>
+			<header>
 
+				<h1>Pete's Pottery</h1>
+				
+				<p id="slogan">A Pot for Everyone</p>
 
-		<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p>
+				<div class="Hero-Image">
+					<img src="images/Wheel_3-1-1500_.png" title="Clay on Wheel" alt="Clay on potter's wheel">
+				</div>
 
-		<p>I strongly believe in the utilitarian aspect of pottery and feel that they need to be used and enjoyed daily. There needs to be an inviting aspect to my work that will draw you in and want to pick the piece up.</p>
+			</header>
 
-		<ul>
-			<li>Custom pottery made to order.</li>
-			<li>Local craftsman</li>
-			<li>Bulk orders available</li>
+			<nav>
 
-		</ul>
+				<h2><a href="www.google.com" target="_blank">Link 1</h2>
+				<h2><a href="www.google.com" target="_blank">Link 2</h2>
+				<h2><a href="www.google.com" target="_blank">Link 3</h2>
 
-		<p>If you're interested in learning more, please contact me <a href="mailto:pward4web@gmail.com">here</a>.
+			</nav>
 
-		<div class="panel-2">
+			<section id="one">
 
-			<h2>About</h2>
+					<article class="description">
 
-			<img class="Panel-Image" src="images/Peter_Portrait(1-1).png" title="Peter Ward" alt="Picture of artist in apron">
+						<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p>
 
-			<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.</p> 
+						<p>I strongly believe in the utilitarian aspect of pottery and feel that they need to be used and enjoyed daily. There needs to be an inviting aspect to my work that will draw you in and want to pick the piece up.</p>
 
-		</div>
+						<ul>
+							<li>Custom pottery made to order.</li>
+							<li>Local craftsman</li>
+							<li>Bulk orders available</li>
 
-		<h2>Process</h2>
+						</ul>
 
-			<img class="Panel-Image" src="images/Unfired_Cups(1-1).png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
-		
-		<p> Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use.</p>
+						<p>If you're interested in learning more, please contact me <a href="mailto:pward4web@gmail.com">here</a>.</p>
 
-		<div class="panel-4">
+					</article>
 
-			<h2>Gallery and Shop</h2>
+			</section>
 
-			<img class="Panel-Image" src="images/Purple_Mugs(1-1).png" title="Purple Mugs" alt="Three purple glazed mugs.">
+			<section id="two">
 
-			<p> Explore the artist's gallery, and order your very own piece from Peter.</p>
+				<aside class="image">
+
+					<h2>About</h2>
+
+					<img class="Panel-Image" src="images/Peter_Portrait(1-1).png" title="Peter Ward" alt="Picture of artist in apron">
+
+				</aside>
+
+				<article class="description">
+
+					<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.</p> 
+
+				</article>
+
+			</section>
+
+			<section id="three">
+
+				<aside class="image">
+
+					<h2>Process</h2>
+
+					<img class="Panel-Image" src="images/Unfired_Cups(1-1).png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
+
+				</aside>
+
+				<article class="description">
+			
+					<p>Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tellus ipsum. Nunc vel mi eu magna condimentum fringilla.</p>
+
+				</article>
+
+			</section>
+
+			<section id="four">
+
+				<aside class="image">
+
+					<h2>Gallery and Shop</h2>
+
+					<img class="Panel-Image" src="images/Purple_Mugs(1-1).png" title="Purple Mugs" alt="Three purple glazed mugs.">
+
+				</aside>
+
+				<article class="description">
+
+					<p> Explore the artist's gallery, and order your very own piece from Peter. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tellus ipsum. Nunc vel mi eu magna condimentum fringilla.</p>
+
+				</article>	
+
+			</section>
+
+			<footer>
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tellus ipsum. Nunc vel mi eu magna condimentum fringilla. Quisque nisl nisi, maximus et pretium vel, interdum ac ipsum. Aenean finibus vel quam nec blandit. Nullam vitae maximus nisi. Praesent varius tellus id luctus tristique.</p>
+
+			</footer>
 
 		</div>
 
 	</body>
+
 </html>
