--- a/pete/index.html
+++ b/pete/index.html
@@ -12,28 +12,25 @@
 		<div class="wrapper">
 
 			<header>
-
-				<h1>Pete's Pottery</h1>
-				
-				<p id="slogan">A Pot for Everyone</p>
-
-				<div class="Hero-Image">
-					<img src="images/Wheel_3-1-1500_.png" title="Clay on Wheel" alt="Clay on potter's wheel">
-				</div>
+					
+					<h1>Pete's Pottery</h1>
+					<p id="slogan">A Pot for Everyone</p>
 
 			</header>
 
 			<nav>
 
-				<h2><a href="www.google.com" target="_blank">Link 1</h2>
-				<h2><a href="www.google.com" target="_blank">Link 2</h2>
-				<h2><a href="www.google.com" target="_blank">Link 3</h2>
+				<ul>
+					<li><a href="www.google.com" target="_blank">About</a></li>
+					<li><a href="www.google.com" target="_blank">Process</a></li>
+					<li><a href="www.google.com" target="_blank">Gallery</a></li>
+				</ul>
 
-			</nav>
+			</nav>			
 
 			<section id="one">
 
-					<article class="description">
+					<article>
 
 						<p>Peter Ward is a New Hampshire-based potter and charcoal artist, specializing in simple, affordable, but impeccably crafted pots to serve the decorative and practical purposes of your next housewarming, wedding, or other gift giving event.</p>
 
@@ -52,17 +49,17 @@
 
 			</section>
 
-			<section id="two">
+			<section id="two" class="clearfix">
 
-				<aside class="image">
+				<aside id="left">
 
 					<h2>About</h2>
 
-					<img class="Panel-Image" src="images/Peter_Portrait(1-1).png" title="Peter Ward" alt="Picture of artist in apron">
+					<img class="Panel-Image" src="css/images/Peter_Portrait(1-1).png" title="Peter Ward" alt="Picture of artist in apron">
 
 				</aside>
 
-				<article class="description">
+				<article id="right">
 
 					<p>Peter graduated with a degree in Fine Arts from Franklin Pierce University in Rindge, New Hampshire, and has been a practicing potter for the last eight years. In addition to a desire for perfection in each piece, his goal is to make handcrafted pottery an affordable luxury for every ceramics lover.</p> 
 
@@ -70,17 +67,17 @@
 
 			</section>
 
-			<section id="three">
+			<section id="three" class="clearfix">
 
-				<aside class="image">
+				<aside id="right">
 
 					<h2>Process</h2>
 
-					<img class="Panel-Image" src="images/Unfired_Cups(1-1).png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
+					<img class="Panel-Image" src="css/images/Unfired_Cups(1-1).png" title="Unfired Cups" alt="Three unfired, wet ceramic cups">
 
 				</aside>
 
-				<article class="description">
+				<article id="left">
 			
 					<p>Drawing from Korean and British pottery design inspiration and with an admiration for potters Hans Coper and Walter Keeler, Peter's work is uniquely made for everyday, utilitarian use. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tellus ipsum. Nunc vel mi eu magna condimentum fringilla.</p>
 
@@ -88,17 +85,17 @@
 
 			</section>
 
-			<section id="four">
+			<section id="four" class="clearfix">
 
-				<aside class="image">
+				<aside id="left">
 
 					<h2>Gallery and Shop</h2>
 
-					<img class="Panel-Image" src="images/Purple_Mugs(1-1).png" title="Purple Mugs" alt="Three purple glazed mugs.">
+					<img class="Panel-Image" src="css/images/Purple_Mugs(1-1).png" title="Purple Mugs" alt="Three purple glazed mugs.">
 
 				</aside>
 
-				<article class="description">
+				<article class="right">
 
 					<p> Explore the artist's gallery, and order your very own piece from Peter. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tellus ipsum. Nunc vel mi eu magna condimentum fringilla.</p>
 
@@ -107,6 +104,12 @@
 			</section>
 
 			<footer>
+
+				<ul id="utility-nav">
+					<li><a href="www.google.com" target="_blank">About</a></li>
+					<li><a href="www.google.com" target="_blank">Process</a></li>
+					<li><a href="www.google.com" target="_blank">Gallery</a></li>
+				</ul>
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tristique tellus ipsum. Nunc vel mi eu magna condimentum fringilla. Quisque nisl nisi, maximus et pretium vel, interdum ac ipsum. Aenean finibus vel quam nec blandit. Nullam vitae maximus nisi. Praesent varius tellus id luctus tristique.</p>
 
